# satysfi-pagenumber

./: README.md  Satyristes  satysfi-pagenumber-doc.opam  satysfi-pagenumber.opam
doc/: manual-ja.saty  manual.saty
src/: pagenumber.satyh
