opam-version: "2.0"
name: "satysfi-pagenumber"
version: "1.0.0"
synopsis: "A SATySFi package for number of pages"
description: """A SATySFi package for number of pages"""
maintainer: "Noriyuki Abe"
authors: "Noriyuki Abe"
license: "BSD-2-Clause-FreeBSD"
homepage: "https://github.com/abenori/satysfi-pagenumber"
dev-repo: "git+https://github.com/abenori/satysfi-pagenumber.git"
bug-reports: "https://github.com/abenori/satysfi-pagenumber/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7"}
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-base" { >= "1.4.0" & < "2.0.0" }
  "satysfi-dist"

  # If your library depends on other libraries, please write down here
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "pagenumber"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "pagenumber"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
